--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </p>
                                 <br>
                                 <strong>Bom para:</strong>
-                                <ul>
+                                <ul id="last-ul">
                                     <li><a href="#">Casais</a></li>
                                     <li><a href="#">Famílias</a></li>
                                     <li><a href="#">Orçamento</a></li>
@@ -121,7 +121,7 @@
                         </li>
                     </ol>
 
-                    <p>
+                    <p id="description">
                         As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto
                         marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma
                         atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público
@@ -133,7 +133,11 @@
     </main>
 
     <footer>
-        <p>Feito com <img src="" alt="ícone"> pela Rocketseat</p>
+        <p>
+            Feito com 
+            <img src="assets/Vector.svg" alt="">
+            pela Rocketseat
+        </p>
     </footer>
 
 </body>
